<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/stuff"
        android:checkableBehavior="single">
        <item
            android:id="@+id/myNavHostFragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/empty" />
        <item
            android:id="@+id/favorietenFragment"
            android:icon="@drawable/ic_favorite_border_black_24dp2"
            android:title="@string/empty" />
        <item
            android:id="@+id/infoFragment"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/empty"/>
    </group>
</menu>